--- a/SalesWebApp/appsettings.json
+++ b/SalesWebApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebAppContext-d06b0fff-e4e7-4c76-81dd-205264640090;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
