MySQL adaptation and first migration

--- a/SalesWebApp/appsettings.json
+++ b/SalesWebApp/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebAppContext-d06b0fff-e4e7-4c76-81dd-205264640090;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebAppContext": "Data Source=LAPTOP-9FEU7NC1;Initial Catalog=dbsales;User ID=SA;Password=*******;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
