Other entities and second migration

--- a/SalesWebApp/appsettings.json
+++ b/SalesWebApp/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebAppContext": "Data Source=LAPTOP-9FEU7NC1;Initial Catalog=dbsales;User ID=SA;Password=*******;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SalesWebAppContext": "Data Source=LAPTOP-9FEU7NC1;Initial Catalog=dbsales;User ID=SA;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
